add Controller entity

--- a/src/main/resources/assets/chaosstorage/lang/en_us.json
+++ b/src/main/resources/assets/chaosstorage/lang/en_us.json
@@ -242,6 +242,7 @@
   "item.chaosstorage.wireless_grid": "Wireless Grid",
   "item.chaosstorage.creative_wireless_grid": "Creative Wireless Grid",
   "item.chaosstorage.wireless_fluid_grid": "Wireless Fluid Grid",
+  "item.chaosstorage.wireless_unlinked": "Unlinked",
   "item.chaosstorage.creative_wireless_fluid_grid": "Creative Wireless Fluid Grid",
   "item.chaosstorage.wireless_crafting_monitor": "Wireless Crafting Monitor",
   "item.chaosstorage.creative_wireless_crafting_monitor": "Creative Wireless Crafting Monitor",
